# riffnav

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.toml  demo.tape
.github/workflows/: ci.yml  release.yml
examples/: spike.rs
src/: app.rs  autodiff.rs  cli.rs  config.rs  delta.rs  forge.rs  herdr.rs  icons.rs  main.rs  review.rs  theme.rs  watch.rs
src/diff/: mod.rs  model.rs  parser.rs
src/tree/: mod.rs  model.rs  state.rs
src/ui/: diffview.rs  filetree.rs  mod.rs
src/ui/snapshots/: riffnav__ui__tests__hides_tree_when_disabled.snap  riffnav__ui__tests__renders_tree_and_layout.snap
