[package]
name = "riffnav"
version = "0.2.0"
edition = "2024"

[dependencies]
ansi-to-tui = "8.0.1"
anyhow = "1.0.102"
arboard = "3.6.1"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["use-dev-tty"] }
fuzzy-matcher = "0.3.7"
notify = "8.2.0"
ratatui = "0.30.1"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
