[package]
name = "riffnav"
version = "1.0.0"
edition = "2024"
description = "A git diff pager with a file tree, powered by delta"
authors = ["Olli Paakkunainen <olli@paakkunainen.fi>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ollipa/riffnav"
keywords = ["git", "diff", "delta", "tui", "pager"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["/.local", "/.github", "/demo.tape"]

[dependencies]
ansi-to-tui = "8.0.1"
anyhow = "1.0.102"
arboard = "3.6.1"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["use-dev-tty"] }
fuzzy-matcher = "0.3.7"
notify = "8.2.0"
# unstable-rendered-line-info exposes Paragraph::line_count, which we use to
# size the scrollback when wrapping unified diffs (delta leaves those unwrapped).
ratatui = { version = "0.30.1", features = ["unstable-rendered-line-info"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1.2"
twox-hash = { version = "2.1.2", default-features = false, features = ["xxhash3_128", "std"] }

[dev-dependencies]
insta = "1.48.0"
